@@ -18,6 +18,7 @@ FEATURE: UI   | Option to show confirmation dialog on torrent Removal [Nolar]
 FEATURE: UI   | Added Seed2PeerRatio item to MyTorrents view [Nolar]
 FEATURE: UI   | Added detailed connection State to peers view [Nolar]
 FEATURE: Core | Optimistic Connect: drop inactive connections in order to find better ones [Nolar]
+FEATURE: UI   | Added Connected Time item to peers view [Nolar]
 
 CHANGE: Core | Support azureus.install.path parameter, used by new linux launcher script [Nolar]
 CHANGE: UI   | Create torrent wizard now initially defaults torrent save path from "save to" default [Parg]
